--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/edit.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/edit.html.twig
@@ -1,28 +1,47 @@
-{% extends '::base.html.twig' %}
+{% extends "ApplicationCertificatsBundle::layout.html.twig" %}
 
-{% block body -%}
-    <h1>Eproduit edit</h1>
+          
+{% block javascripts %}
+{{ parent() }}
+{{ tinymce_init() }}
+{% endblock %}
 
-    <form action="{{ path('eproduit_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
-        <input type="hidden" name="_method" value="PUT" />
-        {{ form_widget(edit_form) }}
-        <p>
-            <button type="submit">Edit</button>
-        </p>
-    </form>
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('eproduit') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <form action="{{ path('eproduit_delete', { 'id': entity.id }) }}" method="post">
-            <input type="hidden" name="_method" value="DELETE" />
-            {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
-        </form>
-    </li>
-</ul>
+{% block content_header '' %}
+{% block title %}
+PRODUIT: {{ entity.name }}
+{% endblock %}
+{% block content %}
+
+
+
+ <form action="{{ path('eproduit_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
+     <table class="table table-bordered">
+    <tbody>         <tr><td>
+                 <div>
+                  {{ form_row(edit_form.name) }}
+                     {{ form_row(edit_form.services) }}
+              </div>
+               </td>
+                   </td>
+ <td>
+ {{ form_row(edit_form.description) }}
+{{ form_rest(edit_form) }} </td>
+                                 </tr>
+                                     
+<tr><td colspan="2">
+                                   
+  <button type="submit" class="btn btn-small btn-warning">Modifier</button>
+  <a href="{{ path('eproduit') }}" class="btn btn-small btn-primary">Retour</a>
+   </form>       
+                                    
+                                       
+                                </td></tr>
+                        </tbody>
+                    </table>
+ 
+
+      
+
+       
 {% endblock %}
