--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/index.html.twig
@@ -8,7 +8,7 @@
 
 {% block content_header '' %}
 {% block title %}
-LISTE DES SERVICES 
+LISTE DES PRODUITS 
 {% endblock %}
 {% block content %}
 
@@ -21,7 +21,7 @@ LISTE DES SERVICES
     {% endfor %}
 {% endfor %}
 
-<h1>Eproduit list</h1>
+<a href="{{ path('eproduit_new') }}" class="btn btn-small btn-primary">Ajouter un Produit</a>
 
 <table class="table table-striped table-bordered table-hover">
     <thead>
@@ -29,35 +29,40 @@ LISTE DES SERVICES
                  <th>Id</th>
                 <th>Name</th>
                 <th>Description</th>
-                <th>Actions</th>
+                 <th colspan="3">Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for entity in pagination %}
             <tr>
+                
+                
                 <td><a href="{{ path('eproduit_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
                 <td>{{ entity.description }}</td>
-                <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('eproduit_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('eproduit_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
+                
+                
+                     <td>
+                    <a href="{{ path('eproduit_show', { 'id': entity.id }) }}">
+                        <img src="{{ asset('bundles/applicationcertificats/images/detail.png') }}" alt="show" width="15" height="15" />
+                    </a>
                 </td>
+                <td>
+                    <a href="{{ path('eproduit_edit', { 'id': entity.id }) }}">
+                        <img src="{{ asset('bundles/applicationcertificats/images/edit.png') }}" alt="edit" width="15" height="15" />
+                    </a>
+                </td>
+                   <td>
+     <a href="{{ path('eproduit_delete', { 'id': entity.id }) }}">
+                        <img src="{{ asset('bundles/applicationcertificats/images/delete.png') }}" alt="delete" width="15" height="15" />
+                    </a>
+                </td>
+                
+                
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-        <ul>
-        <li>
-            <a href="{{ path('eproduit_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
+  {{ knp_pagination_render(pagination) }}
+      
     {% endblock %}
