--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/new.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/new.html.twig
@@ -6,24 +6,45 @@
      
  {% endblock %}
 
+             
+{% block javascripts %}
+{{ parent() }}
+{{ tinymce_init() }}
+{% endblock %}
+ 
 {% block content_header '' %}
+
+      {% block title %}
+Ajouter Un Produit
+{% endblock %}
+
+
 
 {% block content %}
 
-    <h1>Eproduit creation</h1>
-
-    <form action="{{ path('eproduit_create') }}" method="post" {{ form_enctype(form) }}>
-        {{ form_widget(form) }}
-        <p>
-            <button type="submit">Create</button>
-        </p>
-    </form>
-
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('eproduit') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
+ <form action="{{ path('eproduit_create') }}" method="post" {{ form_enctype(form) }}>
+    <table class="table table-bordered">
+    <tbody>         <tr><td>
+                 <div>
+                  {{ form_row(form.name) }}
+                     {{ form_row(form.services) }}
+              </div>
+               </td>
+                   </td>
+ <td>
+ {{ form_row(form.description) }}
+{{ form_rest(form) }} </td>
+                                 </tr>
+                                     
+<tr><td colspan="3">
+                                   
+  <button type="submit" class="btn btn-small btn-warning">Modifier</button>
+  <a href="{{ path('eproduit') }}" class="btn btn-small btn-primary">Retour</a>
+   </form>       
+                                    
+                                       
+                                </td></tr>
+                        </tbody>
+                    </table>
+  
 {% endblock %}
