--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/show.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/show.html.twig
@@ -1,9 +1,23 @@
-{% extends '::base.html.twig' %}
+{% extends "ApplicationCertificatsBundle::layout.html.twig" %}
 
-{% block body -%}
-    <h1>Eproduit</h1>
+  {% block stylesheets %}
+{{ parent() }}
+      <link rel="stylesheet" href="{{ asset('bundles/applicationcertificats/css/sliding.css') }}" type="text/css" media="all"/>
+     
+ {% endblock %}
 
-    <table class="record_properties">
+{% block content_header '' %}
+{% block title %}
+PRODUIT: {{ entity.name }}
+{% endblock %}
+
+{% block content %}
+     <br>  
+<a href="{{ path('eservice') }}" class="btn btn-small btn-success">Retour</a>
+<a href="{{ path('eproduit_edit', { 'id': entity.id }) }}" class="btn btn-small btn-warning">Editer</a>
+<br> <br> 
+
+  <table class="table table-striped table-bordered table-hover">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -20,23 +34,6 @@
         </tbody>
     </table>
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('eproduit') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <a href="{{ path('eproduit_edit', { 'id': entity.id }) }}">
-            Edit
-        </a>
-    </li>
-    <li>
-        <form action="{{ path('eproduit_delete', { 'id': entity.id }) }}" method="post">
-            <input type="hidden" name="_method" value="DELETE" />
-            {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
-        </form>
-    </li>
-</ul>
+    
+   
 {% endblock %}
