--- a/src/Application/CertificatsBundle/Resources/views/Eservice/show.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eservice/show.html.twig
@@ -8,18 +8,29 @@
 
 {% block content_header '' %}
 {% block title %}
-LISTE DES SERVICES 
+LISTE DE MES SERVICES 
 {% endblock %}
 {% block content %}
-    <h1>Eservice</h1>
+       
+<a href="{{ path('eservice') }}" class="btn btn-small btn-success">Retour</a>
 
-    <table class="record_properties">
+<a href="{{ path('eservice_edit', { 'id': entity.id }) }}" class="btn btn-small btn-warning">Editer</a>
+<br> <br> 
+
+  <table class="table table-striped table-bordered table-hover">
         <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ entity.id }}</td>
             </tr>
             <tr>
+                    <th>Proprietaire</th>
+                    <td>
+           {{ entity.demandeur }}   
+                 </td>
+                    </tr>
+                    
+                    <tr>
                 <th>Datefin</th>
                 <td>{{ entity.dateFin|date('Y-m-d H:i:s') }}</td>
             </tr>
@@ -29,28 +40,18 @@ LISTE DES SERVICES
             </tr>
             <tr>
                 <th>Description</th>
-                <td>{{ entity.description }}</td>
+                <td>{{ entity.description|raw }}</td>
             </tr>
+            
+            
+            <tr>
+                    <th>Utilisateurs</th>
+                    <td>
+           {{ entity.idusers|join(', ') }}   
+                 </td>
+                    </tr>
         </tbody>
     </table>
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('eservice') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <a href="{{ path('eservice_edit', { 'id': entity.id }) }}">
-            Edit
-        </a>
-    </li>
-    <li>
-        <form action="{{ path('eservice_delete', { 'id': entity.id }) }}" method="post">
-            <input type="hidden" name="_method" value="DELETE" />
-            {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
-        </form>
-    </li>
-</ul>
+    
 {% endblock %}
