services et produits

--- a/src/Application/CertificatsBundle/Resources/views/Eservice/new.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eservice/new.html.twig
@@ -27,7 +27,7 @@ maxDate: "+3M +10D",
 changeMonth: true,
 changeYeat: true,
 numberOfMonths: 1,
-dateFormat: "yy-mm-dd",
+dateFormat: "yy-mm-dd 12:00",
 onClose: function( selectedDate ) {
 $( "#form_bis" ).datepicker( "option", "minDate", selectedDate );
 }
