--- a/src/Application/CertificatsBundle/Resources/views/Eservice/edit.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eservice/edit.html.twig
@@ -49,10 +49,10 @@ LISTE DES SERVICES
     {{ form_row(edit_form.dateFin) }}
                </div>
    
-            <div>
+     {#       <div>
     {{ form_row(edit_form.demandeur) }}
                </div> 
-     
+     #}
                </td>
                
                   <td>
