--- a/src/Application/CertificatsBundle/Resources/views/Eservice/show.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eservice/show.html.twig
@@ -50,6 +50,11 @@ LISTE DE MES SERVICES
            {{ entity.idusers|join(', ') }}   
                  </td>
                     </tr>
+                    
+                     <tr>
+                <th>Produits</th>
+                <td>{{ entity.produits|join(', ') }}</td>
+            </tr>
         </tbody>
     </table>
 
