--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -51,7 +51,9 @@
                                                Changements<b class="caret"></b> </a>
                                         <ul class="dropdown-menu">
                                             <li><a href="{{ path('changements') }}"><i class="icon-camera"></i> {{ 'Changements'|trans }}</a></li>
-                                             <li><a href="{{ path('changementsapy') }}"><i class="icon-camera"></i> {{ 'Changements DataGrid'|trans }}</a></li>
+                                              <li><a href="{{ path('changements_calendar') }}"><i class="icon-time"></i> {{ 'Calendrier'|trans }}</a></li>
+                                            
+                                            <li><a href="{{ path('changementsapy') }}"><i class="icon-camera"></i> {{ 'Changements DataGrid'|trans }}</a></li>
                                                 <li><a href="{{ path('docchangements') }}"><i class="icon-camera"></i> {{ 'Fichiers'|trans }}</a></li>
                                         
                                         
