--- a/src/Application/CertificatsBundle/Resources/views/Changements/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Changements/index.html.twig
@@ -1,4 +1,10 @@
 {% extends "ApplicationCertificatsBundle::layout.html.twig" %}
+{% macro icon_class( type ) %}
+  {% set type_class_map = {
+    like: 'icon-user'
+  } %}
+  {{ type_class_map[type] }}
+{% endmacro %}
 
   {% block stylesheets %}
 {{ parent() }}
@@ -22,98 +28,19 @@ Changements
     </div>
     {% endfor %}
 {% endfor %}
-
-
-{#% set events = calendr_events(week) %#}
-{# outputs $5,500.00 }
-{{ '5500'|price }}
-
-{{ 'Highlight this sentence'|highlight('i')|raw }}
-{{ 'Highlight this sentence'|highlightme|raw }#}
-    <a href="{{ path('changements_newflow') }}" class="btn btn-small btn-primary">Ajouter Changement</a>
-
-    <table class="table small table-striped table-condensed table-bordered table-hover">
-
-        <thead>
-            <tr class="title">
-                <th>S</th> 
-                <th> <span class="label label-warning">  Lundi</span></th>
-                <th> <span class="label label-warning">  Mardi</span></th>
-                <th> <span class="label label-warning">  Mercredi</span></th>
-                <th> <span class="label label-warning">  Jeudi</span></th>
-                <th> <span class="label label-warning">  Vendredi</span></th>
-                <th> <span class="label label-warning">  Samedi</span></th>
-                <th> <span class="label label-warning">  Diamche</span></th>
-            </tr>  
-        </thead>
-        <tbody>
-            <tr>
-    {% for week in month %}
-                    <td><p class="text-warning"> S-{{ week }} </p></td>
-            {% for day in week %}
-                    <td>
-                         {#% if month.includes(day) %#}
-                    {% if month.contains(day.begin) %}
-
-                            <span class="label">  {{ day.begin.format('d') }} </span><br>
-         {% for event in evenement.find(day) %}
-                            <a href="{{ path('changements_show', { 'id': event.uid }) }}">
-            {{ event }}</a>
-                                <br>
-        {% endfor %}
-                    {% else %}
-                                &nbsp;
-                    {% endif %}
-                            </td>
-            {% endfor %}
-                        </tr>
-    {% endfor %}
-
-                </table>
-{#
-    {% set week = calendr_week(2012, 14) %}
-{% set events = calendr_events(week) %}
-
-<h1>Events for week #{{ week }}</h1>
-{% for day in week %}
-    <h2>{{ day }}</h2>
-    <ul>
-        {% for event in events.find(day) %}
-            <li>{{ event }}</li>
-        {% endfor %}
-    </ul>
-{% endfor %}
-#}
-    
-    
- {#%
-<h1>Events for Month #{{ month }}</h1>
-{% for week in month %}
-    {% for day in week %}
-        <h2>{{ day }} - {{ day.begin.format('d') }}  - {{ month }}</h2>
-        <ul>
-           
-        {% for event in evenement.find(day.begin) %}
-            <li>{{ event }}</li>
-        {% endfor %}
-    </ul>
-{% endfor %}
-{% endfor %}    
-    %#}      
-
-  {#% for ev in events %}
- {{ ev.nom }} <br>
- {% endfor %#}
-
-                <br> <br>  
-
+ 
+<a href="{{ path('changements_newflow') }}" class="btn btn-small btn-primary">Ajouter un Changement</a>
+ <br><br> 
                 <table class="table table-striped table-bordered table-hover">
                     <thead>
                         <tr class="title">
                             <th>{{ knp_pagination_sortable(pagination, 'Id', 'a.id') }}</th>
-                            <th{% if pagination.isSorted('a.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Nom', 'a.nom') }}</th>
-                            <th{% if pagination.isSorted('a.dateDebut') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Date Debut', 'a.dateDebut') }}</th>
-                            <th{% if pagination.isSorted('a.dateFin') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Date Fin', 'a.dateFin') }}</th>
+                            <th{% if pagination.isSorted('a.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Nom', 'a.nom') }}
+                              <i class="icon-pencil"></i></th>
+                            <th{% if pagination.isSorted('a.dateDebut') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Date Debut', 'a.dateDebut') }}
+                              <i class="icon-time"></i></th>
+                            <th{% if pagination.isSorted('a.dateFin') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Date Fin', 'a.dateFin') }}
+  <i class="icon-time"></i></th>
 
                             <!--     <th{#% if pagination.isSorted('a.dateComep') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Date COMEP', 'a.dateComep') }}</th>
                 <th{% if pagination.isSorted('a.dateVsr') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Date VSR', 'a.dateVsr') }#}</th>
@@ -121,12 +48,18 @@ Changements
 
 <!--     <th{#% if pagination.isSorted('a.description') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Description', 'a.description') }#}</th>-->
                             <th{% if pagination.isSorted('b.nomprojet') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Projet', 'b.nomprojet') }}</th>
-                            <th{% if pagination.isSorted('c.nomUser') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Demandeur', 'c.nomUser') }}</th>
-                            <th>Files</th>
-                            <th{% if pagination.isSorted('a.nomUser') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Users', 'c.nomUser') }}</th>
-                            <th{% if pagination.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Status', 'd.idStatus.nom') }}</th>
-
-                            <th>Environnements</th>
+                            <th{% if pagination.isSorted('c.nomUser') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'D', 'c.nomUser') }}
+                             <i class="icon-user"></i></th>
+                            <th><i class="icon-book"></i></th>
+                            <th{% if pagination.isSorted('e.nomUser') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Users', 'e.nomUser') }}
+                             <i class="icon-user"></i><i class="icon-user"></i></th>
+                            <th{% if pagination.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'F', 'd.idStatus.nom') }}
+                             <i class="icon-flag"></i></th>
+                      
+                            {#
+      <th>{{ knp_pagination_sortable(pagination, 'kind', 'k.type') }}</th>
+<th class="{{ bootstrap.icon_class(heading) }}">{{ heading }}</th>#}
+                            <th> Env <i class="icon-wrench"></i></th>
                             <!--<th>Avatar</th>-->
                             <th colspan="2">Actions</th>
                         </tr>
