--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/index.html.twig
@@ -39,7 +39,7 @@ LISTE DES PRODUITS
                 
                 <td><a href="{{ path('eproduit_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
-                <td>{{ entity.description }}</td>
+                <td>{{ entity.description|raw }}</td>
                 
                 
                      <td>
@@ -64,5 +64,5 @@ LISTE DES PRODUITS
         </tbody>
     </table>
   {{ knp_pagination_render(pagination) }}
-      
+
     {% endblock %}
