--- a/src/Application/CertificatsBundle/Resources/views/Eservice/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eservice/index.html.twig
@@ -8,7 +8,7 @@
 
 {% block content_header '' %}
 {% block title %}
-LISTE DE MES SERVICES 
+MES SERVICES 
 {% endblock %}
 {% block content %}
 
@@ -21,38 +21,67 @@ LISTE DE MES SERVICES
 {% endfor %}
 
 <a href="{{ path('eservice_new') }}" class="btn btn-small btn-primary">Ajouter un Service</a>
-<br> <br>
-
 <br><br>
+
 <table class="table table-striped table-bordered table-hover">
     <thead>
         <tr class="title">
                 <th>Id</th>
-                 <th>Name</th>
-                  <th>Datefin <i class="icon-calendar"></i></th>
+                <th{% if paginationa.isSorted('a.name') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Nom', 'a.name') }}</th>
+                  <th{% if paginationa.isSorted('a.dateFin') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Date Fin', 'a.dateFin') }} <i class="icon-time"></i></th>
+                  
+                  
                 
                  <th>Demandeur <i class="icon-user"></i></th>
                   <th>Utilisateurs <i class="icon-user"></i></th>
                    <th>Produits <i class="icon-gift"></i></th>
-                     <th>Brouzoufs <i class="icon-shopping-cart"></i></th>
+                   
+                   <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
+{{ knp_pagination_sortable(paginationa, 'Status', 'd.idStatus.nom') }}
+                   <i class="icon-flag"></i></th>
+                      <th{% if paginationa.isSorted('a.brouzoufs') %} class="sorted"{% endif %}>
+
+{{ knp_pagination_sortable(paginationa,'Brouzoufs' , 'a.brouzoufs') }} <i class="icon-shopping-cart"></i>
+                          </th>
+                
+                          
                 <th colspan="3">Actions</th>
             </tr>
         </thead>
         <tbody>
-       {% for entity in pagination %}
-
-             
-                          
-            <tr>
+       {% for entity in paginationa %}
+          <tr>
                 <td><a href="{{ path('eservice_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                  <td>{{ entity.name }}</td>
-                 <td>{% if entity.dateFin %}{{ entity.dateFin|date('Y-m-d H:i:s') }}{% endif %}</td>
+                 <td>{% if entity.dateFin %}{{ entity.dateFin|date('Y-m-d') }}{% endif %}</td>
               
                 
                     <td>{{ entity.demandeur }}</td>
                      <td>{{ entity.idusers|join(', ') }}   </td>
                        <td>{{ entity.produits|join(', ') }}   </td>
-                             <td>{{ entity.brouzoufs }}</td>
+                          
+                               <td>
+                                   {% if entity.idStatus is not null %}
+                               {% if entity.idStatus.nom == 'open' %}
+
+                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-souvert.png') }}" alt="show" width="15" height="15" />
+
+ {% else %}
+
+                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-sferme.png') }}" alt="show" width="15" height="15" />
+        {% endif %} 
+ {% else %}
+
+                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-sferme.png') }}" alt="show" width="15" height="15" />
+     
+{% endif %} 
+                                   </td> 
+                                      <td>{{ entity.brouzoufs }}</td>
+                                   
+                                   
+                      
+                             
+                             
                 <td>
                     <a href="{{ path('eservice_show', { 'id': entity.id }) }}">
                         <img src="{{ asset('bundles/applicationcertificats/images/detail.png') }}" alt="show" width="15" height="15" />
@@ -75,6 +104,82 @@ LISTE DE MES SERVICES
         {% endfor %}
         </tbody>
     </table>
-  {{ knp_pagination_render(pagination) }}
+  {{ knp_pagination_render(paginationa) }}
+{#-----------------------------------------------#}
+
+ <center><h1>SERVICES PROPOSES</h1></center>
+<br>
+<table class="table table-striped table-bordered table-hover">
+    <thead>
+        <tr class="title">
+                <th>Id</th>
+                <th{% if paginationb.isSorted('a.name') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationb, 'Nom', 'a.name') }}</th>
+                  <th{% if paginationb.isSorted('a.dateFin') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationb, 'Date Fin', 'a.dateFin') }} <i class="icon-time"></i></th>
+                  
+                  
+                
+                 <th>Demandeur <i class="icon-user"></i></th>
+                  <th>Utilisateurs <i class="icon-user"></i></th>
+                   <th>Produits <i class="icon-gift"></i></th>
+                   
+                   <th{% if paginationb.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
+{{ knp_pagination_sortable(paginationb, 'Status', 'd.idStatus.nom') }}
+                   <i class="icon-flag"></i></th>
+                      <th{% if paginationb.isSorted('a.brouzoufs') %} class="sorted"{% endif %}>
+
+{{ knp_pagination_sortable(paginationb,'Brouzoufs' , 'a.brouzoufs') }} <i class="icon-shopping-cart"></i>
+                          </th>
+                
+                          
+                <th colspan="1">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+       {% for entity in paginationb %}
+          <tr>
+                <td><a href="{{ path('eservice_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                 <td>{{ entity.name }}</td>
+                 <td>{% if entity.dateFin %}{{ entity.dateFin|date('Y-m-d') }}{% endif %}</td>
+              
+                
+                    <td>{{ entity.demandeur }}</td>
+                     <td>{{ entity.idusers|join(', ') }}   </td>
+                       <td>{{ entity.produits|join(', ') }}   </td>
+                          
+                               <td>
+                                   {% if entity.idStatus is not null %}
+                               {% if entity.idStatus.nom == 'open' %}
+
+                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-souvert.png') }}" alt="show" width="15" height="15" />
+
+ {% else %}
+
+                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-sferme.png') }}" alt="show" width="15" height="15" />
+        {% endif %} 
+ {% else %}
+
+                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-sferme.png') }}" alt="show" width="15" height="15" />
+     
+{% endif %} 
+                                   </td> 
+                                      <td>{{ entity.brouzoufs }}</td>
+                                   
+                                   
+                      
+                             
+                             
+                <td>
+                    <a href="{{ path('eservice_show', { 'id': entity.id }) }}">
+                        <img src="{{ asset('bundles/applicationcertificats/images/detail.png') }}" alt="show" width="15" height="15" />
+                    </a>
+                </td>
+
+         
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+  {{ knp_pagination_render(paginationb) }}
+
 
     {% endblock %}
