--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,7 +26,7 @@
                 {% endblock %}
                 </div>
                 <div id="footer">
-                    <p align="center">{{ 'copyright MROOT'|trans }} © 2013</p>
+                    <p align="center">{{ 'copyright MROOT'|trans }} © 2012-2013</p>
                      
                 </div>
                 <!-- Le javascript ================================================== -->
