--- a/src/Application/Sonata/NewsBundle/Resources/views/Post/view.html.twig
+++ b/src/Application/Sonata/NewsBundle/Resources/views/Post/view.html.twig
@@ -3,7 +3,8 @@
   {% block stylesheets %}
 {{ parent() }}
       <link rel="stylesheet" href="{{ asset('bundles/applicationcertificats/css/sliding.css') }}" type="text/css" media="all"/>
-     
+    <link rel="stylesheet" href="{{ asset('bundles/applicationsonatanews/css/news.css') }}" type="text/css" media="all"/>
+  
  {% endblock %}
 
       
