--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/new.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/new.html.twig
@@ -27,8 +27,9 @@ Ajouter Un Produit
     <tbody>         <tr><td>
                  <div>
                   {{ form_row(form.name) }}
-                     {{ form_row(form.services) }}
+                {#     {{ form_row(form.services) }}#}
               </div>
+         
                </td>
                    </td>
  <td>
