--- a/src/Application/CertificatsBundle/Resources/views/Eservice/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eservice/index.html.twig
@@ -32,8 +32,8 @@ MES SERVICES
                   
                   
                 
-                 <th>Demandeur <i class="icon-user"></i></th>
-                  <th>Utilisateurs <i class="icon-user"></i></th>
+                 <th>From <i class="icon-user"></i></th>
+                  <th>Pour <i class="icon-user"></i></th>
                    <th>Produits <i class="icon-gift"></i></th>
                    
                    <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
@@ -118,8 +118,8 @@ MES SERVICES
                   
                   
                 
-                 <th>Demandeur <i class="icon-user"></i></th>
-                  <th>Utilisateurs <i class="icon-user"></i></th>
+                 <th>From <i class="icon-user"></i></th>
+                  <th>Pour <i class="icon-user"></i></th>
                    <th>Produits <i class="icon-gift"></i></th>
                    
                    <th{% if paginationb.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
