--- a/src/Application/CertificatsBundle/Resources/views/Eproduit/edit.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eproduit/edit.html.twig
@@ -17,12 +17,22 @@ PRODUIT: {{ entity.name }}
 
  <form action="{{ path('eproduit_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
      <table class="table table-bordered">
-    <tbody>         <tr><td>
+    <tbody>      
+        <tr><td>
                  <div>
                   {{ form_row(edit_form.name) }}
-                     {{ form_row(edit_form.services) }}
+                 {#    {{ form_row(edit_form.services) }}#}
               </div>
-               </td>
+                              <div>
+
+             {% if entity.image is not null %}               
+                                      <p>Image Actuelle</p>
+         <img width="150px" src="{{ vich_uploader_asset(entity, 'image') }}" alt="{{ entity.imageName }}" />
+         {% else %}
+           <p>Pas d'Image</p>
+         {% endif %}
+           </div>
+              
                    </td>
  <td>
  {{ form_row(edit_form.description) }}
