apres passage en symfony 2.2.1: a verifier

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,7 +19,10 @@
                    
                 </div>
                 <div id="content">
-
+ <div id="ptitbutton">
+        <img width="50px" src="{{ asset('images/pieces.jpg') }}" alt="brouzoufs" />
+       
+      </div>
  {#% block navbartitle %} MONBLOG{% endblock %#}
                  <center><h1>   {% block title %}CERTIFICATS{% endblock %}</h1></center>
                 {% block content %}
