--- a/src/Application/CertificatsBundle/Resources/public/css/sliding.css
+++ b/src/Application/CertificatsBundle/Resources/public/css/sliding.css
@@ -22,3 +22,28 @@
 tr.title {
     background-color: #e4e4e4;
 }
+/*calendar big*/
+div#ptitbutton{
+    /*position:absolute; */
+    /* on positionne le conteneur */
+    /* vertical-align:top;*/
+    float:right;
+    /*    margin-bottom: -20px;*/
+
+    margin-right:15px;
+    /* height:50px;*/
+
+}
+
+div#textptitbutton{
+    /*position:absolute; */
+    /* on positionne le conteneur */
+    /* vertical-align:top;*/
+    float:right;
+    /*    margin-bottom: -20px;*/
+
+    margin-right:15px;
+    margin-height:50px;
+    /* height:50px;*/
+
+}
