--- a/src/Application/CertificatsBundle/Resources/views/Eservice/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eservice/index.html.twig
@@ -8,10 +8,14 @@
 
 {% block content_header '' %}
 {% block title %}
+     
+
 MES SERVICES 
 {% endblock %}
 {% block content %}
-
+<div id="textptitbutton">
+       Mon total de brouzoufs: xxxx
+      </div>
 {% for type, flashMessages in app.session.flashbag.all() %}
     {% for flashMessage in flashMessages %}
         <div class="alert alert-{{ type }}">
