--- a/src/Application/CertificatsBundle/Resources/views/Eservice/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eservice/index.html.twig
@@ -13,6 +13,10 @@
 MES SERVICES 
 {% endblock %}
 {% block content %}
+<div id="ptitbutton">
+        <img width="50px" src="{{ asset('images/pieces.jpg') }}" alt="brouzoufs" />
+       
+      </div>
 <div id="textptitbutton">
        Mon total de brouzoufs: xxxx
       </div>
