--- a/src/Application/CertificatsBundle/Resources/views/CertificatsCenter/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/CertificatsCenter/index.html.twig
@@ -22,6 +22,13 @@ LISTE DES {{ parent() }}
 <a href="{{ path('certificatscenter_new') }}" class="btn btn-small btn-primary">Ajouter Certificat</a>
 <br> <br>  
 
+<form  class="form-horizontal" action="{{ path('certificatscenter') }}" method="post" {{ form_enctype(search_form) }}>
+    {{ form_widget(search_form) }}
+    <p>
+       <button type="submit" class="btn btn-large btn-warning">Edit</button>
+       
+    </p>
+</form>
 <table class="table table-striped table-bordered table-hover">
     <thead>
         <tr class="title">
