eservice contrat de service

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -61,6 +61,10 @@
                                                Services<b class="caret"></b> </a>
                                         <ul class="dropdown-menu">
                                             <li><a href="{{ path('eservice') }}"><i class="icon-camera"></i> {{ 'Dashboard Services'|trans }}</a></li>
+                                            <li><a href="{{ path('eservice_messervices') }}"><i class="icon-camera"></i> {{ 'Mes Propositions de Services'|trans }}</a></li>
+                                            <li><a href="{{ path('eservice_demandes') }}"><i class="icon-camera"></i> {{ 'Mes Demandes de Services'|trans }}</a></li>
+                                           <li><a href="{{ path('eservice_other') }}"><i class="icon-camera"></i> {{ 'Services Propsés'|trans }}</a></li>
+                                           
                                             <li><a href="{{ path('eproduit') }}"><i class="icon-plus-sign"></i> {{ 'Produits'|trans }}</a></li>
                                             </ul>
                                     </li>
