--- a/src/Application/CertificatsBundle/Resources/views/Eservice/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eservice/index.html.twig
@@ -5,14 +5,31 @@
       <link rel="stylesheet" href="{{ asset('bundles/applicationcertificats/css/sliding.css') }}" type="text/css" media="all"/>
      
  {% endblock %}
+      
+      
+{% block javascripts %}
+{{ parent() }}
+<script type="text/javascript">
+          
+$(function () {
+   var activeTab = null;
+$('a[data-toggle="tab"]').on('shown', function (e) {
+  activeTab = e.target;
+})
+/*$('#myTab a:last').tab('show');*/
+  /*var activeTab = $('[href=' + location.hash + ']');
+  activeTab && activeTab.tab('show');*/
+});
+</script>
+{% endblock %}
 
 {% block content_header '' %}
 {% block title %}
-     
 
-MES SERVICES 
+DASHBOARD - SERVICES
 {% endblock %}
 {% block content %}
+<br>
 <div id="ptitbutton">
         <img width="50px" src="{{ asset('images/pieces.jpg') }}" alt="brouzoufs" />
        
@@ -28,166 +45,38 @@ MES SERVICES
     {% endfor %}
 {% endfor %}
 
+
+<div class="tabbable"> <!-- Only required for left/right tabs -->
+<ul class="nav nav-tabs">
+<li class="active"><a href="#tab1" data-toggle="tab">MES PROPOSITIONS</a></li>
+<li><a href="#tab2" data-toggle="tab">PROPOSITIONS EN ATTENTE</a></li>
+<li><a href="#tab3" data-toggle="tab">MES DEMANDES</a></li>
+</ul>
+        
+ <div class="tab-content">
+<div class="tab-pane active" id="tab1">
+
 <a href="{{ path('eservice_new') }}" class="btn btn-small btn-primary">Ajouter un Service</a>
 <br><br>
+{% include 'ApplicationCertificatsBundle:Eservice:template_services.html.twig' with {'mypagination': paginationa,'etitable':'1'} %}
 
-<table class="table table-striped table-bordered table-hover">
-    <thead>
-        <tr class="title">
-                <th>Id</th>
-                <th{% if paginationa.isSorted('a.name') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Nom', 'a.name') }}</th>
-                  <th{% if paginationa.isSorted('a.dateFin') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationa, 'Date Fin', 'a.dateFin') }} <i class="icon-time"></i></th>
-                  
-                  
-                
-                 <th>From <i class="icon-user"></i></th>
-                  <th>Pour <i class="icon-user"></i></th>
-                   <th>Produits <i class="icon-gift"></i></th>
-                   
-                   <th{% if paginationa.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
-{{ knp_pagination_sortable(paginationa, 'Status', 'd.idStatus.nom') }}
-                   <i class="icon-flag"></i></th>
-                      <th{% if paginationa.isSorted('a.brouzoufs') %} class="sorted"{% endif %}>
+</div>
+<div class="tab-pane" id="tab2">
 
-{{ knp_pagination_sortable(paginationa,'Brouzoufs' , 'a.brouzoufs') }} <i class="icon-shopping-cart"></i>
-                          </th>
-                
-                          
-                <th colspan="3">Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-       {% for entity in paginationa %}
-          <tr>
-                <td><a href="{{ path('eservice_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                 <td>{{ entity.name }}</td>
-                 <td>{% if entity.dateFin %}{{ entity.dateFin|date('Y-m-d') }}{% endif %}</td>
-              
-                
-                    <td>{{ entity.demandeur }}</td>
-                     <td>{{ entity.idusers|join(', ') }}   </td>
-                       <td>{{ entity.produits|join(', ') }}   </td>
-                          
-                               <td>
-                                   {% if entity.idStatus is not null %}
-                               {% if entity.idStatus.nom == 'open' %}
-
-                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-souvert.png') }}" alt="show" width="15" height="15" />
-
- {% else %}
-
-                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-sferme.png') }}" alt="show" width="15" height="15" />
-        {% endif %} 
- {% else %}
-
-                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-sferme.png') }}" alt="show" width="15" height="15" />
-     
-{% endif %} 
-                                   </td> 
-                                      <td>{{ entity.brouzoufs }}</td>
-                                   
-                                   
-                      
-                             
-                             
-                <td>
-                    <a href="{{ path('eservice_show', { 'id': entity.id }) }}">
-                        <img src="{{ asset('bundles/applicationcertificats/images/detail.png') }}" alt="show" width="15" height="15" />
-                    </a>
-                </td>
-                <td>
-
-
-                    <a href="{{ path('eservice_edit', { 'id': entity.id }) }}">
-                        <img src="{{ asset('bundles/applicationcertificats/images/edit.png') }}" alt="edit" width="15" height="15" />
-                    </a>
-                </td>
-                   <td>
-     <a href="{{ path('eservice_delete', { 'id': entity.id }) }}">
-                        <img src="{{ asset('bundles/applicationcertificats/images/delete.png') }}" alt="delete" width="15" height="15" />
-                    </a>
-                </td>
+<a href="{{ path('eservice_other') }}" class="btn btn-small btn-primary">Consulter les propositions</a>
+{% include 'ApplicationCertificatsBundle:Eservice:template_services.html.twig' with {'mypagination': paginationb,'etitable':'0'} %}
+<br><br>
+</div>
          
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-  {{ knp_pagination_render(paginationa) }}
-{#-----------------------------------------------#}
-
- <center><h1>SERVICES PROPOSES</h1></center>
-<br>
-<table class="table table-striped table-bordered table-hover">
-    <thead>
-        <tr class="title">
-                <th>Id</th>
-                <th{% if paginationb.isSorted('a.name') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationb, 'Nom', 'a.name') }}</th>
-                  <th{% if paginationb.isSorted('a.dateFin') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(paginationb, 'Date Fin', 'a.dateFin') }} <i class="icon-time"></i></th>
-                  
-                  
-                
-                 <th>From <i class="icon-user"></i></th>
-                  <th>Pour <i class="icon-user"></i></th>
-                   <th>Produits <i class="icon-gift"></i></th>
-                   
-                   <th{% if paginationb.isSorted('d.idStatus.nom') %} class="sorted"{% endif %}>
-{{ knp_pagination_sortable(paginationb, 'Status', 'd.idStatus.nom') }}
-                   <i class="icon-flag"></i></th>
-                      <th{% if paginationb.isSorted('a.brouzoufs') %} class="sorted"{% endif %}>
-
-{{ knp_pagination_sortable(paginationb,'Brouzoufs' , 'a.brouzoufs') }} <i class="icon-shopping-cart"></i>
-                          </th>
-                
-                          
-                <th colspan="1">Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-       {% for entity in paginationb %}
-          <tr>
-                <td><a href="{{ path('eservice_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                 <td>{{ entity.name }}</td>
-                 <td>{% if entity.dateFin %}{{ entity.dateFin|date('Y-m-d') }}{% endif %}</td>
-              
-                
-                    <td>{{ entity.demandeur }}</td>
-                     <td>{{ entity.idusers|join(', ') }}   </td>
-                       <td>{{ entity.produits|join(', ') }}   </td>
-                          
-                               <td>
-                                   {% if entity.idStatus is not null %}
-                               {% if entity.idStatus.nom == 'open' %}
-
-                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-souvert.png') }}" alt="show" width="15" height="15" />
-
- {% else %}
-
-                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-sferme.png') }}" alt="show" width="15" height="15" />
-        {% endif %} 
- {% else %}
-
-                                            <img src="{{ asset('bundles/applicationcertificats/images/cadenas-sferme.png') }}" alt="show" width="15" height="15" />
-     
-{% endif %} 
-                                   </td> 
-                                      <td>{{ entity.brouzoufs }}</td>
-                                   
-                                   
-                      
-                             
-                             
-                <td>
-                    <a href="{{ path('eservice_show', { 'id': entity.id }) }}">
-                        <img src="{{ asset('bundles/applicationcertificats/images/detail.png') }}" alt="show" width="15" height="15" />
-                    </a>
-                </td>
-
          
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-  {{ knp_pagination_render(paginationb) }}
+<div class="tab-pane" id="tab3">
+<a href="{{ path('eservice_demandes') }}" class="btn btn-small btn-primary">Ajouter une demande</a>
+<br><br>
+{% include 'ApplicationCertificatsBundle:Eservice:template_services.html.twig' with {'mypagination': pagination_demandes,'etitable':'1'} %}
+</div>
+
+</div>
+</div>
 
 
-    {% endblock %}
+{% endblock %}
