--- a/src/Application/CertificatsBundle/Resources/views/Eservice/show.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eservice/show.html.twig
@@ -8,13 +8,18 @@
 
 {% block content_header '' %}
 {% block title %}
-LISTE DE MES SERVICES 
+DETAILS DU SERVICE: {{ entity.name }}
 {% endblock %}
 {% block content %}
        
 <a href="{{ path('eservice') }}" class="btn btn-small btn-success">Retour</a>
 
+{#
+{{ ismine }}
+#}
+   {% if ismine == 1 %}
 <a href="{{ path('eservice_edit', { 'id': entity.id }) }}" class="btn btn-small btn-warning">Editer</a>
+{% endif %}
 <br> <br> 
 
   <table class="table table-striped table-bordered table-hover">
