blog  modif mineure

--- a/src/Application/CertificatsBundle/Resources/views/Eservice/index.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eservice/index.html.twig
@@ -56,21 +56,22 @@ DASHBOARD - SERVICES
  <div class="tab-content">
 <div class="tab-pane active" id="tab1">
 
-<a href="{{ path('eservice_new') }}" class="btn btn-small btn-primary">Ajouter un Service</a>
+
+<a href="{{ path('eservice_new') }}" class="btn btn-small btn-primary"><i class="icon-plus"></i> Ajouter un Service</a>
 <br><br>
 {% include 'ApplicationCertificatsBundle:Eservice:template_services.html.twig' with {'mypagination': paginationa,'etitable':'1'} %}
 
 </div>
 <div class="tab-pane" id="tab2">
 
-<a href="{{ path('eservice_other') }}" class="btn btn-small btn-primary">Consulter les propositions</a>
+<a href="{{ path('eservice_other') }}" class="btn btn-small btn-primary"><i class="icon-search"></i> Consulter les propositions</a>
 {% include 'ApplicationCertificatsBundle:Eservice:template_services.html.twig' with {'mypagination': paginationb,'etitable':'0'} %}
 <br><br>
 </div>
          
          
 <div class="tab-pane" id="tab3">
-<a href="{{ path('eservice_demandes') }}" class="btn btn-small btn-primary">Ajouter une demande</a>
+<a href="{{ path('eservice_demandes') }}" class="btn btn-small btn-primary"><i class="icon-plus"></i> Ajouter une demande</a>
 <br><br>
 {% include 'ApplicationCertificatsBundle:Eservice:template_services.html.twig' with {'mypagination': pagination_demandes,'etitable':'1'} %}
 </div>
