--- a/src/Application/CertificatsBundle/Resources/views/Eservice/contrat.html.twig
+++ b/src/Application/CertificatsBundle/Resources/views/Eservice/contrat.html.twig
@@ -44,11 +44,10 @@
 {% endblock %}
 
 {% block content_header '' %}
-{% block title %}NOUVEAU CHANGEMENT{% endblock %}
+{% block title %}NOUVEAU CONTRAT SERVICE{% endblock %}
 {% block content %}
 
-
-        <table class="table table-striped table-bordered">
+ <table class="table table-striped table-bordered">
            <tbody>
            <tr><td><div>
             ETAPES:
@@ -59,40 +58,14 @@
     {% include 'CraueFormFlowBundle:FormFlow:stepField.html.twig' %}
 
     {{ form_errors(form) }}
-
-                                {#% if flow.getCurrentStep() == 4 %}
-                                  {{ form_row(edit_form.description,{ 'attr': {'class': 'mytextarea'} }) }}
-                                {{ form_rest(edit_form) }}
-                                
- {% endif %#}
- {% if flow.getCurrentStep() == 6 %}
+ {% if flow.getCurrentStep() == 4 %}
                                 <div>
-                                   
-                     
-                                    {#{ dump form.vars }#}
-            <p class="valider">Vérifier Les paramètres de la demande et cliquer sur Valider.</p>
-                                  
-       <table class="table table-striped table-bordered table-hover">
-        <tbody>
-           <tr> <th>Nom</th><td>{{ entity.name }}</td> </tr>
-           <tr> <th>Demandeur</th> <td>{{ entity.description }}</td> </tr>
-           <tr> <th>Datedebut</th> <td>{{ entity.dateDebut|date('Y-m-d H:i:s') }}</td>   </tr>
-           <tr><th>Datefin</th><td>{{ entity.dateFin|date('Y-m-d H:i:s') }}</td></tr>
-           
-            {% else %}
-               Aucune
-           {% endif %}
-           </td></tr>
-             </td></tr>
-           <
-            </tbody>
-           </table>
-
-    
-    {{ form_rest(form) }}
-     </td></tr><tr><td colspan="2">
-                                            <!-- ======================= CRAUE SURCHARGE =================== -->
-
+                                    end step
+                      </div>
+    {% endif %}
+                         
+                     </td></tr><tr><td> {{ form_rest(form) }}</td>
+               <!-- ======================= CRAUE SURCHARGE =================== -->
 
  {% set renderBackButton = flow.getCurrentStep() in (flow.getFirstStep() + 1) .. flow.getLastStep() %}
         <div class="craue_formflow_buttons craue_formflow_button_count_{% if renderBackButton %}3{% else %}2{% endif %}">
@@ -101,7 +74,7 @@
 		Thus, all buttons are defined in reverse order and will be reversed again via CSS.
 		See http://stackoverflow.com/questions/1963245/multiple-submit-buttons-specifying-default-button
 	#}
-                                                    <button type="submit" class="btn btn-small btn-primary">
+             <button type="submit" class="btn btn-small btn-primary">
 		{%- if flow.getCurrentStep() < flow.getLastStep() -%}
 			{{- 'Suivant' | trans({}, 'CraueFormFlowBundle') -}}
 		{%- else -%}
@@ -120,6 +93,9 @@
 	{{- 'RESET' | trans({}, 'CraueFormFlowBundle') -}}
         </button>
        </div>
+
+               
+               
 
      <!-- ======================= FIN CRAUE SURCHARGE =================== -->        
     </form>
